syntax = "proto3";
package isuxportal.proto.services.contestant;
option go_package = "github.com/isucon/isucon10-portal/proto/services/contestant";

import "isuxportal/resources/benchmark_job.proto";

message ListBenchmarkJobsRequest {
}

message ListBenchmarkJobsResponse {
  repeated BenchmarkJob jobs = 1;
}

message EnqueueBenchmarkJobRequest {
  // target ContestantInstance id
  int64 target_id = 1;
}

message EnqueueBenchmarkJobResponse {
  BenchmarkJob job = 1;
}

// Query parameter
message GetBenchmarkJobQuery {
  int64 id = 1;
}

message GetBenchmarkJobResponse {
  BenchmarkJob job = 1;
}
